fix comic prev/next layout on firefox

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -256,6 +256,11 @@ p.wip-status {
   margin: 10px; 
 }
 
+.m20 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .ml-15 {
   margin-left: -15px; 
 }
@@ -317,6 +322,7 @@ ul.no-bullet {
 .sharing {
   background-color: #ffd0d0;
   text-align: center;
+  margin-top: 0px !important;
 }
 
 .copyright{
